--- a/Homeworks/Homework_1.ipynb
+++ b/Homeworks/Homework_1.ipynb
@@ -5,7 +5,7 @@
    "id": "d9112b3e",
    "metadata": {},
    "source": [
-    "# Daniel lupercio - STAT 724 HW 1"
+    "# Daniel Lupercio - STAT 724 HW 1"
    ]
   },
   {
