almost done with HW4

--- a/Homeworks/HW4.ipynb
+++ b/Homeworks/HW4.ipynb
@@ -21,7 +21,7 @@
    "id": "54c6fdb3",
    "metadata": {},
    "source": [
-    "## (a) Create a training set containing a random sample of 800 observations, and a test set containing the remaining observations."
+    "## Apply boosting, bagging, and random forests to the OJ data set  - the data and a short description are attached. Be sure to fit all the models on a training set and to evaluate their performance on a test set."
    ]
   },
   {
@@ -557,7 +557,7 @@
     "                      feature=feature[i],\n",
     "                      threshold=threshold[i],\n",
     "                      right=children_right[i]))\n",
-    "    return k"
+    "    return (\"The number of terminal nodes: \", k)"
    ]
   },
   {
