--- a/Final_Project/Linear_Regression.ipynb
+++ b/Final_Project/Linear_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +85,30 @@
    ],
    "source": [
     "len(abnb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %store -r abnb_queens_df\n",
+    "# print(abnb_queens_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # abnb_queens_df.plot?\n",
+    "# abnb_queens_df.plot(kind=\"scatter\", x=\"longitude\", y=\"latitude\", alpha=0.4,\n",
+    "#              label=\"instant_bookable\", figsize=(10,7),\n",
+    "#              c=\"price\", cmap=plt.get_cmap(\"jet\"), colorbar=True,\n",
+    "#              sharex=False)\n",
+    "# plt.legend()"
    ]
   },
   {
