--- a/Lectures/ISLR10_clustering_labs.ipynb
+++ b/Lectures/ISLR10_clustering_labs.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,20 +132,20 @@
        "California     9.0      276        91  40.6"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# In R, I exported the dataset to a csv file. It is part of the base R distribution.\n",
-    "df = pd.read_csv('../data/USArrests.csv', index_col=0)\n",
+    "df = pd.read_csv('/Users/daniel421/Desktop/STAT_724/ISLR_data/USArrests.csv', index_col=0)\n",
     "df.head() # info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,11 +193,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = pd.DataFrame(scale(df), index=df.index, columns=df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Murder   Assault  UrbanPop      Rape\n",
+      "Alabama     1.255179  0.790787 -0.526195 -0.003451\n",
+      "Alaska      0.513019  1.118060 -1.224067  2.509424\n",
+      "Arizona     0.072361  1.493817  1.009122  1.053466\n",
+      "Arkansas    0.234708  0.233212 -1.084492 -0.186794\n",
+      "California  0.281093  1.275635  1.776781  2.088814\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.head())"
    ]
   },
   {
@@ -897,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,6 +928,31 @@
     "X = np.random.standard_normal((50,2))\n",
     "X[:25,0] = X[:25,0]+3\n",
     "X[:25,1] = X[:25,1]-4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.58324215  0.8638039   1.20656441  3.50288142  1.94204778  3.55145404\n",
+      "  3.04153939  3.53905832  2.9808695   2.25212905  2.12189211  3.25657045\n",
+      "  2.66117803  2.36234499  1.57878277  2.73094304  0.56523242  3.37044454\n",
+      "  3.50185721  3.00000976  2.6864918   1.13190935  4.46767801  3.61134078\n",
+      "  2.17086471  1.00036589 -0.37566942  0.43349633 -0.63467931  0.21611601\n",
+      " -0.41931648 -0.03957024 -2.04032305 -0.67767558  0.52429643 -0.65325027\n",
+      " -0.38151648 -1.09873895 -2.65944946  0.69511961 -0.18946926  0.82470301\n",
+      " -0.40389227  1.36723542 -0.46200535  0.38186623  0.20420798 -1.7379595\n",
+      "  0.38047197  1.1735315 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X[:,0])"
    ]
   },
   {
